--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:background="#333"
     tools:context=".MainActivity"
     tools:ignore="HardcodedText">
-
     <androidx.appcompat.widget.Toolbar
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"
@@ -17,19 +16,17 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title="FragmentsDemo"
+        android:background="#6750A4"
+        app:title="Your Shop"
         app:titleTextColor="@color/white"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
-
     <androidx.fragment.app.FragmentContainerView
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/navigationBar"
-        app:layout_constrainedHeight="true"
         android:id="@+id/mainFragmentView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:layout="@layout/item_list_fragment" />
-
+        tools:layout="@layout/data_form_fragment"/>
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,23 +35,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1">
-
         <Button
             style="?android:attr/buttonBarStyle"
+            android:id="@+id/switchToDataFormFragmentButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:text="Form"
+            android:textSize="24sp"/>
+        <Button
+            style="?android:attr/buttonBarStyle"
+            android:id="@+id/switchToItemListFragmentButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:text="Items"
             android:textSize="24sp"/>
-
-        <Button
-            style="?android:attr/buttonBarStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:text="***"
-            android:textSize="24sp"/>
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
