--- a/app/src/main/res/layout/fragment_add_new_window.xml
+++ b/app/src/main/res/layout/fragment_add_new_window.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddNewWindowFragment"
-    android:background="#80000000">
-
-
+    android:background="#80000000"
+    tools:ignore="HardcodedText">
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +16,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.9"
         android:background="@color/cardview_dark_background">
-
         <LinearLayout
             android:padding="5dp"
             android:layout_width="match_parent"
@@ -26,7 +24,6 @@
             android:orientation="vertical"
             app:layout_constraintWidth_percent="0.8"
             tools:ignore="MissingConstraints">
-
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
@@ -36,43 +33,60 @@
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:background="#333"
-                tools:ignore="HardcodedText" />
-
+                tools:ignore="HardcodedText"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#333"
                 android:orientation="horizontal">
-
                 <EditText
                     android:id="@+id/itemName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:autofillHints=""
                     android:textAlignment="center"
                     android:layout_weight="1"
+                    android:textColor="@color/white"
                     android:hint="Item Name"
+                    android:textColorHint="#999"
                     android:inputType="text"
-                    android:textColorHint="#80FFFFFF"
-                    tools:ignore="InefficientWeight" />
-
+                    tools:ignore="InefficientWeight"/>
                 <EditText
                     android:id="@+id/itemAmount"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:autofillHints=""
                     android:textAlignment="center"
                     android:layout_weight="1"
+                    android:textColor="@color/white"
                     android:hint="Amount"
-                    android:inputType="number"
-                    android:textColorHint="#80FFFFFF" />
+                    android:textColorHint="#999"
+                    android:inputType="number"/>
             </LinearLayout>
-
-            <Button
-                android:id="@+id/addDataButton"
+            <LinearLayout
+                style="?android:attr/buttonBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#333"
-                android:text="Add" />
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/cancelAddDataButton"
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:background="#333"
+                    android:text="Cancel"
+                    android:textSize="24sp" />
+                <Button
+                    android:id="@+id/addDataButton"
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:background="#333"
+                    android:text="Add"
+                    android:textSize="24sp"/>
+            </LinearLayout>
         </LinearLayout>
     </FrameLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
